terraform-example-code/module/eks_vpc/eip.tf
resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    "Name" = "${var.environment}-nat-eip"
  }
}
